--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Add Open Sans from Google Fonts here -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Pacifico|Raleway" rel="stylesheet">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
 	</script>
 	<script src = "assets/js/script.js"></script>
 </head>
