--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="container">
 		<div id="Map">
-			<div id="title">Elva's World Map</div>
+			<div id="title">Elva's Travel Map</div>
 			<img src="assets/img/map.png" id='map'/>
       <div id="Melbourne" class="marker">
     		<img class="pin" src="assets/img/marker.png"/>
